PC-87 squish bugs
-tags and tabs with some x colors
-fix height not accounting for space when there’s no status-bar
-search always visible
-fix tags in container not being in editmode

--- a/assets/scss/forms.scss
+++ b/assets/scss/forms.scss
@@ -143,6 +143,7 @@ input {
 header {
 
   #search {
+    float: right;
     height: 36px;
     line-height: 1;
     margin: 9px auto;
